syntax = "proto3";
package zeta.booth;

option go_package = "zeta/x/booth/types";
import "booth/vote_params.proto"; 

message Poll {
  uint64 pollId = 1; 
  string pollAccAddr = 2; 
  uint64 votingPower = 3; 
  uint64 disputeId = 4; 
  repeated uint64 voteIds = 5; 
  VoteParams verdict = 6; 
  
}

